Back Color Added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           colors: {
             primary: "#2C3E50",
             secondary: "#E67E22",
+            backColor: '#517394',
           },
           borderRadius: {
             none: "0px",
@@ -282,7 +283,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp M. Track Ivory Electro Coating/Imp M. Track Ivory Electro Coating.webp"
-                      alt="Imp M. Track Ivory Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp M. Track Ivory Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-m-track-ivory-electro-coating.html">
                       Quick View
@@ -300,7 +301,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp M. Track Antique Electro Coating/Imp M. Track Antique Electro Coating.webp"
-                      alt="Imp M. Track Antique Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp M. Track Antique Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-m-track-antique-electro-coating.html">
                       Quick View
@@ -318,7 +319,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1001 Track Ivory Electro Coating/Imp 1001 Track Ivory Electro Coating.webp"
-                      alt="Imp 1001 Track Ivory Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp 1001 Track Ivory Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1001-track-ivory-electro-coating.html">
                       Quick View
@@ -336,7 +337,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1001 Track Antique Electro Coating/Imp 1001 Track Antique Electro Coating.webp"
-                      alt="Imp 1001 Track Antique Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp 1001 Track Antique Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1001-track-antique-electro-coating.html">
                       Quick View
@@ -355,7 +356,7 @@
                     <img
                       src="./images/Tracks/Imp 1003 Flexible Track Ivory Electro Coating Hospital Track/Imp 1003 Flexible Track Ivory Electro Coating Hospital Track.webp"
                       alt="Imp 1003 Flexible Track Ivory Electro Coating Hospital Track"
-                      class="w-full h-60 object-contain" />
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1003-flexible-track-ivory-electro-coating-hospital-track.html">
                       Quick View
@@ -375,7 +376,7 @@
                     <img
                       src="./images/Tracks/Imp 1004 Flexible Track Ivory Electro Coating Hospital Track/Imp 1004 Flexible Track Ivory Electro Coating Hospital Track.webp"
                       alt="Imp 1004 Flexible Track Ivory Electro Coating Hospital Track"
-                      class="w-full h-60 object-contain" />
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1004-flexible-track-ivory-electro-coating-hospital-track.html">
                       Quick View
@@ -395,7 +396,7 @@
                     <img
                       src="./images/Tracks/Imp 1005 Flexible Track Ivory Electro Coating Hospital Track/Imp 1005 Flexible Track Ivory Electro Coating Hospital Track.webp"
                       alt="Imp 1005 Flexible Track Ivory Electro Coating Hospital Track"
-                      class="w-full h-60 object-contain" />
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1005-flexible-track-ivory-electro-coating-hospital-track.html">
                       Quick View
@@ -414,7 +415,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1006 Track White Electro Coating/Imp 1006 Track White Electro Coating.webp"
-                      alt="Imp 1006 Track White Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp 1006 Track White Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1006-track-white-electro-coating.html">
                       Quick View
@@ -432,7 +433,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1007 Rop Track White Electro Coating/Imp 1007 Rop Track White Electro Coating.webp"
-                      alt="Imp 1007 Rop Track White Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp 1007 Rop Track White Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1007-rope-track-white-electro-coating.html">
                       Quick View
@@ -450,7 +451,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1008 Track White Electro Coating/Imp 1008 Track White Electro Coating.webp"
-                      alt="Imp 1008 Track White Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp 1008 Track White Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1008-track-white-electro-coating.html">
                       Quick View
@@ -468,7 +469,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1009 PVC Electro Coating White/Imp 1009 PVC Electro Coating White.webp"
-                      alt="Imp 1009 PVC Electro Coating White" class="w-full h-60 object-contain" />
+                      alt="Imp 1009 PVC Electro Coating White" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1009-pvc-electro-coating-white.html">
                       Quick View
@@ -486,7 +487,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1010 Track Ivory Electro Coating/Imp 1010 Track Ivory Electro Coating.webp"
-                      alt="Imp 1010 Track Ivory Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp 1010 Track Ivory Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1010-track-ivory-electro-coating.html">
                       Quick View
@@ -504,7 +505,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1011 Track Ivory Electro Coating/Imp 1011 Track Ivory Electro Coating.webp"
-                      alt="Imp 1011 Track Ivory Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp 1011 Track Ivory Electro Coating" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1011-track-ivory-electro-coating.html">
                       Quick View
@@ -522,7 +523,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1012 PVC Electro Coating White/Imp 1012 PVC Electro Coating White.webp"
-                      alt="Imp 1012 PVC Electro Coating White" class="w-full h-60 object-contain" />
+                      alt="Imp 1012 PVC Electro Coating White" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1012-pvc-electro-coating-white.html">
                       Quick View
@@ -540,7 +541,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1013 PVC Electro Coating White/Imp 1013 PVC Electro Coating White.webp"
-                      alt="Imp 1013 PVC Electro Coating White" class="w-full h-60 object-contain" />
+                      alt="Imp 1013 PVC Electro Coating White" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1013-pvc-electro-coating-white.html">
                       Quick View
@@ -558,7 +559,7 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1014 Electro Plating Rose Gold/Imp 1014 Electro Plating Rose Gold.webp"
-                      alt="Imp 1014 Electro Plating Rose Gold" class="w-full h-60 object-contain" />
+                      alt="Imp 1014 Electro Plating Rose Gold" class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1014-electro-plating-rose-gold.html">
                       Quick View
@@ -576,7 +577,8 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp 1015 Roman Track White Electro Coating/Imp 1015 Roman Track White Electro Coating.webp"
-                      alt="Imp 1015 Roman Track White Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp 1015 Roman Track White Electro Coating"
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-1015-roman-track-white-electro-coating.html">
                       Quick View
@@ -595,7 +597,7 @@
                     <img
                       src="./images/Tracks/Imp Venus Roman Track White Without Voice Electro Coating/Imp Venus Roman Track White Without Voice Electro Coating.webp"
                       alt="Imp Venus Roman Track White Without Voice Electro Coating"
-                      class="w-full h-60 object-contain" />
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-venus-roman-track-white-without-voice-electro-coating.html">
                       Quick View
@@ -614,7 +616,8 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp Three Way Manual Track White Electro Coating/Imp Three Way Manual Track White Electro Coating.webp"
-                      alt="Imp Three Way Manual Track White Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp Three Way Manual Track White Electro Coating"
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-three-way-manual-track-white-electro-coating.html">
                       Quick View
@@ -632,7 +635,8 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp Three Way Rope Track White Electro Coating/Imp Three Way Rope Track White Electro Coating.webp"
-                      alt="Imp Three Way Rope Track White Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp Three Way Rope Track White Electro Coating"
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-three-way-rope-track-white-electro-coating.html">
                       Quick View
@@ -650,7 +654,8 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp Four Way Manual Track White Electro Coating/Imp Four Way Manual Track White Electro Coating.webp"
-                      alt="Imp Four Way Manual Track White Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp Four Way Manual Track White Electro Coating"
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-four-way-manual-track-white-electro-coating.html">
                       Quick View
@@ -668,7 +673,8 @@
                   <div class="relative">
                     <img
                       src="./images/Tracks/Imp Four Way Rope Track White Electro Coating/Imp Four Way Rope Track White Electro Coating.webp"
-                      alt="Imp Four Way Rope Track White Electro Coating" class="w-full h-60 object-contain" />
+                      alt="Imp Four Way Rope Track White Electro Coating"
+                      class="w-full h-60 object-contain bg-backColor" />
                     <a class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300"
                       href="./Tracks/imp-four-way-rope-track-white-electro-coating.html">
                       Quick View
