--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           colors: {
             primary: "#2C3E50",
             secondary: "#E67E22",
-            backColor: '#517394',
+            backColor: '#d0d2d6',
           },
           borderRadius: {
             none: "0px",
