--- a/Finials.html
+++ b/Finials.html
@@ -242,6 +242,78 @@
             </h3>
           </div>
         </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Finials/IMP Aluminium Alpina.webp" alt="Imp Aluminium Alpina"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Aluminium Alpina
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Finials/IMP Aluminium Corum.webp" alt="Imp Aluminium Corum"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Aluminium Corum
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Finials/IMP Aluminium Edox.webp" alt="Imp Aluminium Edox"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Aluminium Edox
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Finials/IMP Aluminium Invicta.webp" alt="Imp Aluminium Invicta"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Aluminium Invicta
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Finials/IMP Aluminium Luminox.webp" alt="Imp Aluminium Luminox"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Aluminium Luminox
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Finials/IMP Aluminium Stowa.webp" alt="Imp Aluminium Stowa"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Aluminium Stowa
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Finials/IMP Aluminium Traser.webp" alt="Imp Aluminium Traser"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Aluminium Traser
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Finials/IMP Aluminium Zelos.webp" alt="Imp Aluminium Zelos"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Aluminium Zelos
+            </h3>
+          </div>
+        </div>
       </div>
     </section>
 
