Tracks Pages Added

--- a/Tracks.html
+++ b/Tracks.html
@@ -19,7 +19,7 @@
           colors: {
             primary: "#2C3E50",
             secondary: "#E67E22",
-            backColor: '#517394',
+            backColor: '#d0d2d6',
           },
           fontFamily: {
             poppins: ["Poppins", "sans-serif"],
@@ -399,8 +399,7 @@
         <a href="./Tracks/imp-1042-powerfull-track-black-wallnut.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img
-              src="./images/Tracks/Imp 1042 Powerfull Track Black Wallnut/Imp 1042 Powerfull Track Black Wallnut.webp"
+            <img src="./images/Tracks/Imp 1042 Powerfull Track Black Wallnut/Imp 1042 Powerfull Track Walnut.webp"
               alt="Imp 1042 Powerfull Track Black Wallnut" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -436,18 +435,6 @@
           </div>
         </a>
 
-        <a href="./Tracks/imp-1042-powerfull-track-gold.html">
-          <div
-            class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1042 Powerfull Track Gold/Imp 1042 Powerfull Track Gold.webp"
-              alt="Imp 1042 Powerfull Track Gold" class="w-full h-48 object-contain mb-4 bg-backColor" />
-            <div>
-              <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
-                Imp 1042 Powerfull Track Gold
-              </h3>
-            </div>
-          </div>
-        </a>
 
         <a href="./Tracks/imp-1050-onset-track-white.html">
           <div
@@ -608,7 +595,7 @@
         <a href="./Tracks/imp-1053-onset-track-black-wallnut.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1053 Onset Track Black Wallnut/Imp 1053 Onset Track Black Wallnut.webp"
+            <img src="./images/Tracks/Imp 1053 Onset Track Black Wallnut/Imp 1053 Onset Track Black.webp"
               alt="Imp 1053 Onset Track Black Wallnut" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -713,7 +700,7 @@
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
             <img
-              src="./images/Tracks/Imp 1045 Palmet Double And Single Track White/Imp 1045 Palmet Double And Single Track White.webp"
+              src="./images/Tracks/Imp 1045 Palmet Double And Single Track White/Imp 1045 Palmet Double & Single Track White.webp"
               alt="Imp 1045 Palmet Double And Single Track White"
               class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
@@ -792,7 +779,7 @@
         <a href="./Tracks/imp-1048-verizone-track-antique.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1048 Verizone Track Antique/Imp 1048 Verizone Track Antique.webp"
+            <img src="./images/Tracks/Imp 1048 Verizone Track Antique/Imp 1048 Verizon Track Antique.webp"
               alt="Imp 1048 Verizone Track Antique" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -831,7 +818,7 @@
         <a href="./Tracks/imp-1048-verizone-track-black-wallnut.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1048 Verizone Track Black Wallnut/Imp 1048 Verizone Track Black Wallnut.webp"
+            <img src="./images/Tracks/Imp 1048 Verizone Track Black Wallnut/Imp 1048 Verizon Track Walnut.webp"
               alt="Imp 1048 Verizone Track Black Wallnut" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -844,8 +831,7 @@
         <a href="./Tracks/imp-1054-powerfull-track-black-wallnut.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img
-              src="./images/Tracks/Imp 1054 Powerfull Track Black Wallnut/Imp 1054 Powerfull Track Black Wallnut.webp"
+            <img src="./images/Tracks/Imp 1054 Powerfull Track Black Wallnut/Imp 1054 Powerfull Track Black.webp"
               alt="Imp 1054 Powerfull Track Black Wallnut" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -871,24 +857,11 @@
         <a href="./Tracks/imp-1048-verizone-track-rose-gold.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1048 Verizone Track Rose Gold/Imp 1048 Verizone Track Rose Gold.webp"
+            <img src="./images/Tracks/Imp 1048 Verizone Track Rose Gold/Imp 1048 Verizon Track Rose Gold.webp"
               alt="Imp 1048 Verizone Track Rose Gold" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
                 Imp 1048 Verizone Track Rose Gold
-              </h3>
-            </div>
-          </div>
-        </a>
-
-        <a href="./Tracks/imp-1054-powerfull-track-gold.html">
-          <div
-            class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1054 Powerfull Track Gold/Imp 1054 Powerfull Track Gold.webp"
-              alt="Imp 1054 Powerfull Track Gold" class="w-full h-48 object-contain mb-4 bg-backColor" />
-            <div>
-              <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
-                Imp 1054 Powerfull Track Gold
               </h3>
             </div>
           </div>
@@ -910,7 +883,7 @@
         <a href="./Tracks/imp-1048-verizone-track-silver.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1048 Verizone Track Silver/Imp 1048 Verizone Track Silver.webp"
+            <img src="./images/Tracks/Imp 1048 Verizone Track Silver/Imp 1048 Verizon Track Silver.webp"
               alt="Imp 1048 Verizone Track Silver" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -949,7 +922,7 @@
         <a href="./Tracks/imp-1048-verizone-track-white.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1048 Verizone Track White/Imp 1048 Verizone Track White.webp"
+            <img src="./images/Tracks/Imp 1048 Verizone Track White/Imp 1048 Verizon Track White.webp"
               alt="Imp 1048 Verizone Track White" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -975,7 +948,7 @@
         <a href="./Tracks/imp-1041-onset-track-black-wallnut.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1041 Onset Track Black Wallnut/Imp 1041 Onset Track Black Wallnut.webp"
+            <img src="./images/Tracks/Imp 1041 Onset Track Black Wallnut/Imp 1041 Onset Track Black Wallnutt.webp"
               alt="Imp 1041 Onset Track Black Wallnut" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -988,7 +961,7 @@
         <a href="./Tracks/imp-1048-verizone-track-zelkova.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1048 Verizone Track Zelkova/Imp 1048 Verizone Track Zelkova.webp"
+            <img src="./images/Tracks/Imp 1048 Verizone Track Zelkova/Imp 1048 Verizon Track Zeloka.webp"
               alt="Imp 1048 Verizone Track Zelkova" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -1105,7 +1078,7 @@
         <a href="./Tracks/imp-1050-onset-track-black-wallnut.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1050 Onset Track Black Wallnut/Imp 1050 Onset Track Black Wallnut.webp"
+            <img src="./images/Tracks/Imp 1050 Onset Track Black Wallnut/Imp 1050 Onset Track Black.webp"
               alt="Imp 1050 Onset Track Black Wallnut" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -1119,7 +1092,7 @@
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
             <img
-              src="./images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/Imp 1059 Curtain Without Stiching Roman New Track.webp"
+              src="./images/Tracks/Imp 1059 Curtain Without Stiching Roman New Track/Imp 1059 Curtain Without Stitching Roman New Track.webp"
               alt="Imp 1059 Curtain Without Stiching Roman New Track"
               class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
@@ -1146,7 +1119,7 @@
         <a href="./Tracks/imp-1050-onset-track-gold.html">
           <div
             class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
-            <img src="./images/Tracks/Imp 1050 Onset Track Gold/Imp 1050 Onset Track Gold.webp"
+            <img src="./images/Tracks/Imp 1050 Onset Track Gold/Imp 1050 Onset Gold.webp"
               alt="Imp 1050 Onset Track Gold" class="w-full h-48 object-contain mb-4 bg-backColor" />
             <div>
               <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
