--- a/Pipes.html
+++ b/Pipes.html
@@ -173,6 +173,78 @@
             </h3>
           </div>
         </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Imp Expandable Curtain Road Black (Cafe).webp"
+            alt="Imp Expandable Curtain Road Black (Cafe)" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Expandable Curtain Road Black (Cafe)
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Imp Expandable Curtain Road Black (Traverse).webp"
+            alt="Imp Expandable Curtain Road Black (Traverse)" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Expandable Curtain Road Black (Traverse)
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Imp Expandable Curtain Road White (Luxury).webp"
+            alt="Imp Expandable Curtain Road White (Luxury)" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Expandable Curtain Road White (Luxury)
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Imp Expandable Curtain Road Black (Comet).webp"
+            alt="Imp Expandable Curtain Road Black (Comet)" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Expandable Curtain Road Black (Comet)
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Imp Expandable Curtain Road White (Cafe).webp"
+            alt="Imp Expandable Curtain Road White (Cafe)" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Expandable Curtain Road White (Cafe)
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Imp Expandable Curtain Road White(Traverse).webp"
+            alt="Imp Expandable Curtain Road White(Traverse)" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Expandable Curtain Road White(Traverse)
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Imp Expandable Curtain Road Black (Luxury).webp"
+            alt="Imp Expandable Curtain Road Black (Luxury)" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Expandable Curtain Road Black (Luxury)
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Imp Expandable Curtain Road White (Comet).webp"
+            alt="Imp Expandable Curtain Road White (Comet)" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Expandable Curtain Road White (Comet)
+            </h3>
+          </div>
+        </div>
       </div>
     </section>
     <section id="catalogue" class="text-white py-10">
